# Jisa

./: .gitignore  ARCHITECTURE.md  README.md  REVIEW.md  ROADMAP.md  TODO.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  download_assets.py  job_errors.py  main.py  pyproject.toml
backend/synthesis/: __init__.py  inpainting.py  segmentation.py  typesetting.py
backend/tests/: test_api_response_models.py  test_projects_workflow.py  test_synthesis_regressions.py
frontend/: .dockerignore  Dockerfile  package.json
frontend/app/: layout.tsx  page.tsx
frontend/src/features/manga-translator/: index.ts
frontend/src/features/manga-translator/api/: mangaApi.ts
frontend/src/features/manga-translator/components/: MangaFileItem.tsx  MangaTranslator.tsx  ThaiText.tsx  TranslationEditor.tsx
frontend/src/features/manga-translator/types/: index.ts
