[project]
name = "backend"
version = "0.1.0"
description = "AI Manga Translator Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "opencv-python>=4.10.0",
    "Pillow>=10.3.0",
    "numpy>=1.24.3,<2.0.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "ultralytics>=8.2.0",
    "simple-lama-inpainting>=0.1.2",
    "huggingface-hub>=0.23.0",
    "pythainlp>=5.1.2",
]

[project.scripts]
manga-api = "main:app"

[tool.uv]
managed = true
override-dependencies = [
    "pillow>=10.3.0",
]
